# Gobble

./: .gitignore  README.md  download_and_transcribe.py  find_ads.py  main.py  mcp_server.py  process_existing.py  process_transcripts.py  pyproject.toml  run_gobble.sh  transcribe.py  transcription.json  transcription.txt
tools/ebooks/: __init__.py  book_utils.py  register_tools.py  summarize.py
tools/ebooks/pdf/: pdf_utils.py
tools/knowledge-retrieval/: transcripts.py
tools/knowledge_retrieval/: transcripts.py  vector_store.py
tools/transcription/: parakeet.py
tools/youtube/: download_youtube.py  register_tools.py  search_youtube.py
