[project]
name = "gobble"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-genai>=1.13.0",
    "google-generativeai>=0.3.0",
    "openai>=1.77.0",
    "pydantic>=2.0.0",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "tqdm>=4.67.1",
    "openai-whisper>=1.1.10",
    "fastmcp>=2.2.7",
    "triton>=3.3.0",
    "xformers>=0.0.30",
]
